# BeastArena

./: .gitmodules  CMakeLists.txt
.github/: pull_request_template.md
.github/workflows/: main.yml
assets/: highscores.json
assets/debugger/: level.json  template.json
assets/levels/: box.json  bunny.json  cave.json  city.json  end_screen.json  final_destination.json  lava.json  level1.json  level2.json  pirate.json  taiga.json  volcano.json  windows_95.json
assets/stdlevels/: endgame.json
include/: CMakeLists.txt  player_input.hpp
include/components/: character_selection_component.hpp  damage_component.hpp  gadget_spawn_component.hpp  health_component.hpp  hold_component.hpp  hud_component.hpp  name_selection_component.hpp  ready_component.hpp  spawn_component.hpp  stats_component.hpp  velocity_component.hpp  wandering_component.hpp  weapon_component.hpp
include/controllers/: game_controller.hpp  score_controller.hpp
include/entities/: character_specs.hpp  entity_factory.hpp  layers.hpp
include/enums/: gadget_spawn_type.hpp  game_state.hpp
include/exceptions/: notEnoughPlayerSpawnsException.hpp  sizeMismatchException.hpp
include/level/: level.hpp  solid.hpp
include/menu/: button.hpp  image.hpp  main_menu.hpp  text.hpp
include/scenes/: beast_scene.hpp  credits_scene.hpp  end_scene.hpp  help_scene.hpp  highscore_scene.hpp  intermission_scene.hpp  level_scene.hpp  lobby.hpp  main_menu.hpp  menu.hpp  pause_scene.hpp  scene_manager.hpp  score_scene.hpp
include/systems/: beast_system.hpp  critter_system.hpp  damage_system.hpp  despawn_system.hpp  gadget_spawn_system.hpp  game_speed_system.hpp  game_system.hpp  highscore_system.hpp  hud_system.hpp  lobby_system.hpp  movement_system.hpp  pickup_system.hpp  ready_up_system.hpp  wandering_system.hpp  weapon_system.hpp
lib/: CMakeLists.txt
lib/components/: character_selection_component.cpp  damage_component.cpp  gadget_spawn_component.cpp  health_component.cpp  name_selection_component.cpp  pickup_component.cpp  player_spawn_component.cpp  soawn_component.cpp  spawn_component.cpp  wandering_component.cpp  weapon_component.cpp
lib/controllers/: game_controller.cpp  score_controller.cpp
src/: CMakeLists.txt  main.cpp
src/components/: player_component.cpp  velocity_component.cpp
src/controllers/: game_controller.cpp
src/entities/: entity_factory.cpp
src/systems/: movement_system.cpp
tests/: CMakeLists.txt
(+42 files in other folders)
